Fix home sections vertical alignment

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -175,11 +175,8 @@ section {
     inline-size: 100%;
     margin: 0;
     padding: 0;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
+    display: block;
+    text-align: inherit;
 }
 
 .social-container {
